...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Scholars-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ScholarsViewController" customModule="Scholars" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                                    <rect key="frame" x="0.0" y="0.0" width="140" height="170"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <subviews>
                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="oV0-z3-2t2">
                                                            <rect key="frame" x="0.0" y="0.0" width="140" height="170"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="profilePic"/>
                                                        </imageView>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iS7-YN-mvh">
                                                            <rect key="frame" x="0.0" y="140" width="140" height="30"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="30" id="wV2-cd-Ge6"/>
                                                            </constraints>
...
                                <exclude reference="NXi-k7-HMh"/>
                                <exclude reference="uXB-uv-TQv"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Scholars" id="c3k-PW-oYU">
                        <barButtonItem key="leftBarButtonItem" image="barButtonItemIconAccountFilled" id="u0h-6e-AM3">
                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
                                <action selector="accountButtonTapped:" destination="BYZ-38-t0r" id="V30-Vl-SqH"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" image="mapIcon" id="yIw-0O-2lF">
                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
                                <action selector="mapButtonTapped:" destination="BYZ-38-t0r" id="Cbl-vQ-q1P"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="backgroundImage" translatesAutoresizingMaskIntoConstraints="NO" id="3Z2-1Q-pEK">
                                <rect key="frame" x="0.0" y="-20" width="900" height="620"/>
                            </imageView>
                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" restorationIdentifier="introScroll" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nkJ-wz-Ank">
                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                <subviews>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bgA-Y7-S4c">
                                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
...
