...
            </objects>
            <point key="canvasLocation" x="654" y="123"/>
        </scene>
        <!--UINavigationController-EFS-Va-uZI-->
        <scene sceneID="GTt-g6-E3u">
            <objects>
                <viewControllerPlaceholder storyboardName="Blog" referencedIdentifier="UINavigationController-EFS-Va-uZI" id="Ynw-Bn-98Z" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Item" id="tPn-lb-1QG"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="b0B-yC-PXl" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="826" y="234"/>
        </scene>
...
            </objects>
            <point key="canvasLocation" x="684" y="179"/>
        </scene>
        <!--Credits-->
        <scene sceneID="DSx-xU-nqS">
            <objects>
                <viewControllerPlaceholder storyboardName="Credits" id="vQc-4G-T7I" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Item" id="R2c-aW-tTH"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Gbc-a1-n2s" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="533.5" y="415"/>
        </scene>
...
